# procure-ns

./: README.md
data/: .env  .gitignore  Dockerfile  README.md  dagster.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  scrape_all_awarded.py  scrape_individual_tenders.py  setup.py  utils.py  workspace.yaml
data/alembic/: env.py
data/alembic/versions/: 02a3b10e21ea_initial.py
data/auth_scraper/: Dockerfile  app.mjs  entry_point.sh  main.py
data/data/: definitions.py
data/duck_test/: Dockerfile  definitions.py
data/ingestion/: Dockerfile  definitions.py  models.py  resources.py  utils.py
data/sql/: tender.sql
data/tenders/: Dockerfile  definitions.py  models.py  resources.py  utils.py
data/transformation/: Dockerfile  definitions.py  project.py
data/transformation/dagster_transform/: definitions.py
data/transformation/dbt/: dbt_project.yml  profiles.yml
data/transformation/dbt_transform/: dbt_project.yml  profiles.yml
data/transformation/dbt_transform/models/example/: my_first_dbt_model.sql  schema.yml
scrape/: docker-compose.yml  pyproject.toml  scrape_individual_tenders.py  utils.py
