[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.10",
    "dagster-dbt>=0.26.10",
    "dagster-docker>=0.26.10",
    "dagster-postgres>=0.26.10",
    "dbt-postgres>=1.9.0",
    "docker>=7.1.0",
    "fake-useragent>=2.1.0",
    "httpx>=0.28.1",
    "playwright>=1.51.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
